[gd_scene load_steps=29 format=3 uid="uid://k23e5x3fkpkn"]

[ext_resource type="Script" path="res://scenes/enemies/slime/slime.gd" id="1_r7xqu"]
[ext_resource type="Texture2D" uid="uid://p3m2sv3fey8n" path="res://assets/enemies/slime/slime.png" id="2_g0ewa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpdyh"]
atlas = ExtResource("2_g0ewa")
region = Rect2(0, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_enwlq"]
atlas = ExtResource("2_g0ewa")
region = Rect2(32, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_e35wn"]
atlas = ExtResource("2_g0ewa")
region = Rect2(64, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_727rw"]
atlas = ExtResource("2_g0ewa")
region = Rect2(96, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ecdx"]
atlas = ExtResource("2_g0ewa")
region = Rect2(128, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac5on"]
atlas = ExtResource("2_g0ewa")
region = Rect2(160, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_tahdb"]
atlas = ExtResource("2_g0ewa")
region = Rect2(192, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ljnh"]
atlas = ExtResource("2_g0ewa")
region = Rect2(224, 25, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwamx"]
atlas = ExtResource("2_g0ewa")
region = Rect2(0, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rjeq"]
atlas = ExtResource("2_g0ewa")
region = Rect2(32, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_elf5w"]
atlas = ExtResource("2_g0ewa")
region = Rect2(64, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygdjc"]
atlas = ExtResource("2_g0ewa")
region = Rect2(96, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_05t1j"]
atlas = ExtResource("2_g0ewa")
region = Rect2(128, 50, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbf0v"]
atlas = ExtResource("2_g0ewa")
region = Rect2(0, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn05j"]
atlas = ExtResource("2_g0ewa")
region = Rect2(32, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr4d6"]
atlas = ExtResource("2_g0ewa")
region = Rect2(64, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rsyp"]
atlas = ExtResource("2_g0ewa")
region = Rect2(96, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_0358s"]
atlas = ExtResource("2_g0ewa")
region = Rect2(128, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_higj4"]
atlas = ExtResource("2_g0ewa")
region = Rect2(160, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu6ed"]
atlas = ExtResource("2_g0ewa")
region = Rect2(192, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4n7x"]
atlas = ExtResource("2_g0ewa")
region = Rect2(224, 0, 32, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_oa75v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpdyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e35wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_727rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ecdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac5on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tahdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ljnh")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwamx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rjeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elf5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygdjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05t1j")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbf0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn05j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr4d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rsyp")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0358s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_higj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu6ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4n7x")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73wy6"]
size = Vector2(32, 21)

[sub_resource type="CircleShape2D" id="CircleShape2D_y7iej"]
radius = 256.125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceow0"]
size = Vector2(37, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xgiv"]
size = Vector2(41, 21)

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_r7xqu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.33786e-06, -2.38419e-06)
scale = Vector2(1.92, 1.92)
sprite_frames = SubResource("SpriteFrames_oa75v")
animation = &"move"
frame_progress = 0.667106

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.5, 11.5)
shape = SubResource("RectangleShape2D_73wy6")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_y7iej")

[node name="PlayerHitDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitDetection"]
position = Vector2(2.5, 10)
shape = SubResource("RectangleShape2D_ceow0")

[node name="PlayerHurtDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtDetection"]
position = Vector2(2.5, 11.5)
shape = SubResource("RectangleShape2D_2xgiv")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerHitDetection" to="." method="_on_player_hit_detection_body_entered"]
[connection signal="body_entered" from="PlayerHurtDetection" to="." method="_on_player_hurt_detection_body_entered"]
